[project]
name = "labaratory"
version = "0.1.0"
description = "Сервер для приема и обработки результатов лабораторных анализов от медицинских анализаторов"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
labaratory = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["core"]